<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cadastrar"
            android:icon="@drawable/cadastro"
            android:title="@string/menu_cadastrar" />
        <item
            android:id="@+id/nav_informacoes"
            android:icon="@drawable/informacoes"
            android:title="@string/menu_informacoes" />
        <item
            android:id="@+id/nav_formacao"
            android:icon="@drawable/graduacao"
            android:title="@string/menu_formacao" />
        <item
            android:id="@+id/nav_experiencia"
            android:icon="@drawable/pasta"
            android:title="@string/menu_experiencia" />
    </group>
</menu>