<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_cadastrar">

    <fragment
        android:id="@+id/nav_cadastrar"
        android:name="com.example.infnet_bl5_fda_at.ui.cadastro.CadastroFragment"
        android:label="@string/menu_cadastrar"
        tools:layout="@layout/fragment_cadastro" />

    <fragment
        android:id="@+id/nav_informacoes"
        android:name="com.example.infnet_bl5_fda_at.ui.informacoes.InformacoesFragment"
        android:label="@string/menu_informacoes"
        tools:layout="@layout/fragment_informacoes" />

    <fragment
        android:id="@+id/nav_formacao"
        android:name="com.example.infnet_bl5_fda_at.ui.formacao.FormacaoFragment"
        android:label="@string/menu_formacao"
        tools:layout="@layout/fragment_formacao" />
    <fragment
        android:id="@+id/nav_experiencia"
        android:name="com.example.infnet_bl5_fda_at.ui.experiencia.ExperienciaFragment"
        android:label="@string/menu_experiencia"
        tools:layout="@layout/fragment_experiencia" />
</navigation>